--- a/.env
+++ b/.env
@@ -1,9 +1,11 @@
 APP_NAME="Đa Khoa Ngọc Nhân"
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:vZBKhoe6JZOCNTSetOU3NMUMVl/jwx5hmQCV2dDg6k4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://127.0.0.1:8000
+#APP_URL=https://vitrasau.info.vn/NgocNhan
 ASSET_URL=${APP_URL}
+LIVEWIRE_PREFIX=''
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -15,6 +17,13 @@ DB_PORT=3306
 DB_DATABASE=dakhoangocnhan
 DB_USERNAME=root
 DB_PASSWORD=
+
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=momovitr_thanhnhanct
+#DB_USERNAME=momovitr_hieubkav
+#DB_PASSWORD="Hieu0948066514'"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
