--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "awcodes/filament-tiptap-editor": "3.4",
         "filament/filament": "^3.2",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.11",
@@ -14,6 +13,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.5",
+        "malzariey/filament-lexical-editor": "^1.1",
         "solution-forest/filament-tree": "^2.1",
         "spatie/pdf-to-image": "^1.2"
     },
