--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "@preline/theme-switch": "^2.5.2",
+        "alpinejs": "^3.15.1",
         "aos": "^2.3.4",
-        "preline": "^2.7.0"
+        "preline": "^2.7.0",
+        "swiper": "^12.0.3"
     }
 }
